# file-readers-rs

./: Cargo.toml  README.md
.github/workflows/: benchmarks.yml
read-bufread/src/: main.rs
read-chunks/src/: main.rs
read-default/: Cargo.toml
read-default/src/: main.rs
read-ioread/src/: main.rs
read-threads/src/: main.rs
